# terra-data-contract

./: .gitignore  README.md
artifacts/: cw1_whitelist.wasm  ibc_reflect_send.wasm
contracts/ibc-reflect-send/: Cargo.toml  README.md  ibc_reflect_send.wasm
contracts/ibc-reflect-send/src/: contract.rs  msg.rs
contracts/token/: README.md  astroport_lbp_token.wasm
contracts/wallet-scores/: Cargo.toml  README.md  wallet_scores.wasm
contracts/wallet-scores/src/: contract.rs  msg.rs  state.rs
scripts/: README.md  bombay-12.json  build_app.sh  deploy_configs.ts  deploys.ts  helpers.ts  package-lock.json  package.json  sample.local.env  test_app.sh  tests.ts  types.d.ts
