[package]
name = "ibc-reflect-send"
version = "0.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# Change this to [] if you don't need Windows support and want faster integration tests.
# default = ["cranelift"]
# Use cranelift backend instead of singlepass. This is required for development on Windows.
# cranelift = ["cosmwasm-vm/cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { path = "../../packages/std", features = ["iterator", "staking", "stargate"] }
cosmwasm-storage = { path = "../../packages/storage", features = ["iterator"] }
cw-storage-plus = {version = "0.8.0", features = ['iterator']}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
# we only need to enable this if we use integration tests
#cosmwasm-vm = { version = "0.10.1", default-features = false }
cosmwasm-schema = { version = "0.16.1" }
